--- a/style.css
+++ b/style.css
@@ -49,6 +49,20 @@ body {
     margin: 0;
 }
 
+.surprise-btn {
+    background: #C0D5D3;
+    padding: 6px 30px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: background-color 0.3s ease;
+}
+
+.surprise-btn:hover {
+    background: #699b96;
+}
+
 .main {
     height: 640px;
     display: flex;
@@ -80,4 +94,87 @@ body {
     font-weight: 400;
     color: #cccccc;
     margin-top: 32px;
+}
+
+.seprator {
+    margin: 50px 50px 30px;
+    padding: 10px 20px;
+    background: rgba(255, 255, 255, 0.08);
+    display: inline-block;
+    color: #C0D5D3;
+    border-radius: 12px;
+}
+
+.about {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+    padding: 0 50px;
+}
+
+.about .info h3 {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.about .info p {
+    color: #cccccc;
+    font-size: 14px;
+}
+
+.about .info button {
+    margin-top: 30px;
+}
+
+.skills {
+    display: flex;
+    justify-content: space-around;
+    padding: 0 50px;
+}
+
+.skills .left {
+    width: 680px;
+}
+
+.skills .left .info h3 {
+    color: #fff;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.skills .left .info p {
+    color: #ccc;
+    font-size: 14px;
+}
+
+.skills .left button {
+    margin-top: 30px;
+}
+
+.skills .right {
+    width: 420px;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 12px;
+}
+
+.skills .right .item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #383e45;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+}
+
+.skills .right .item i {
+    font-size: 34px;
+    color: #fff;
 }
