--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     height: 100vh;
     background: #191516;
@@ -18,6 +22,7 @@ body {
     justify-content: space-between;
     height: 80px;
     padding: 0 50px;
+    background-color: #1c1c1c;
 }
 
 .navbar h2 {
@@ -64,7 +69,7 @@ body {
 }
 
 .main {
-    height: 640px;
+    height: 720px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,16 +101,16 @@ body {
     margin-top: 32px;
 }
 
-.seprator {
+.separator {
     margin: 50px 50px 30px;
-    padding: 10px 20px;
+    padding: 10px 10px;
     background: rgba(255, 255, 255, 0.08);
     display: inline-block;
     color: #C0D5D3;
     border-radius: 12px;
 }
 
-.about {
+.content {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -113,68 +118,171 @@ body {
     padding: 0 50px;
 }
 
-.about .info h3 {
+.content .info h3 {
     color: #fff;
     font-size: 32px;
     font-weight: 600;
     margin-bottom: 10px;
 }
 
-.about .info p {
+.content .info p {
     color: #cccccc;
     font-size: 14px;
+    font-weight: 400;
+    text-align: justify;
 }
 
-.about .info button {
-    margin-top: 30px;
+footer {
+    position: relative;
+    background: #1c1c1c;
+    padding: 40px 50px 40px;
+    margin-top: 100px;
 }
 
-.skills {
+footer .cols {
     display: flex;
-    justify-content: space-around;
-    padding: 0 50px;
 }
 
-.skills .left {
-    width: 680px;
+footer .cols .about-col h3 {
+    color: #C0D5D3;
+    margin-bottom: 10px;
 }
 
-.skills .left .info h3 {
-    color: #fff;
-    font-size: 30px;
-    margin-bottom: 20px;
+footer .cols .about-col p {
+    color: #cccccc;
+    font-size: 13px;
 }
 
-.skills .left .info p {
-    color: #ccc;
-    font-size: 14px;
+footer .links-col {
+    margin-left: auto;
 }
 
-.skills .left button {
-    margin-top: 30px;
+footer .cols .links-col a {
+    display: block;
+    text-decoration: none;
+    color: #7b7b7b;
+    font-size: 20px;
+    margin-top: 0.5vh;
+    transition: color 0.3s ease;
+    font-weight: 500;
 }
 
-.skills .right {
-    width: 420px;
-    height: 120px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 12px;
+footer .cols .links-col a:hover {
+    color: #C0D5D3;
 }
 
-.skills .right .item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #383e45;
-    width: 50px;
-    height: 50px;
-    border-radius: 10px;
+@media screen and (max-width: 1100px) {
+    .skills {
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .skills .left {
+        width: 500px;
+    }
+
+    .skills .left .info h3 {
+        font-size: 22px;
+    }
+
+    .skills .left .info p {
+        font-size: 12px;
+    }
+
+    footer {
+        margin-top: 150px;
+    }
+
+    footer .cols {
+        flex-wrap: wrap;
+    }
+
+    footer .cols .about-col {
+        flex-basis: 50%;
+    }
+
+    footer .cols .links-col {
+        flex-basis: 50%;
+    }
 }
 
-.skills .right .item i {
-    font-size: 34px;
-    color: #fff;
+@media screen and (max-width: 780px) {
+
+    .navbar button {
+        display: none;
+    }
+
+    .main h4 {
+        font-size: 24px;
+    }
+
+    .main p.title {
+        font-size: 36px;
+    }
+
+    .main p.subtitle {
+        font-size: 14px;
+    }
+
+    .content {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+}
+
+@media screen and (max-width: 650px) {
+
+    .navbar {
+        justify-content: center;
+    }
+
+    .navbar h2 {
+        display: none;
+    }
+
+    .navbar ul li a {
+        font-size: 14px;
+    }
+
+    .main {
+        margin-top: 50px;
+        height: 320px;
+        justify-content: start;
+    }
+
+    .main h4 {
+        font-size: 20px;
+    }
+
+    .main p.title {
+        font-size: 28px;
+    }
+
+    .main p.subtitle {
+        font-size: 12px;
+    }
+
+    footer .cols .about-col {
+        flex-basis: 100%;
+        margin-bottom: 40px;
+    }
+
+    footer .cols .links-col {
+        flex-basis: 100%;
+        margin-bottom: 20px;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+
+    .main p.title {
+        font-size: 18px;
+    }
+
+    .main p.subtitle {
+        font-size: 10px;
+    }
+
 }
