--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
     height: 100vh;
-    background: #191516;
+    background: #171314;
 }
 
 .navbar {
@@ -22,7 +22,7 @@ body {
     justify-content: space-between;
     height: 80px;
     padding: 0 50px;
-    background-color: #1c1c1c;
+    background-color: #1D191A;
 }
 
 .navbar h2 {
@@ -40,7 +40,7 @@ body {
 
 .navbar ul li a {
     text-decoration: none;
-    color: #808080;
+    color: #878A87;
     font-size: 16px;
     margin-right: 25px;
     transition: color 0.3s ease;
@@ -102,7 +102,7 @@ body {
 }
 
 .separator {
-    margin: 50px 50px 30px;
+    margin: 50px 50px 20px;
     padding: 10px 10px;
     background: rgba(255, 255, 255, 0.08);
     display: inline-block;
@@ -134,7 +134,7 @@ body {
 
 footer {
     position: relative;
-    background: #1c1c1c;
+    background: #1D191A;
     padding: 40px 50px 40px;
     margin-top: 100px;
 }
