--- a/css/style.css
+++ b/css/style.css
@@ -289,17 +289,32 @@ section .header {
     }
 }
 
+.scroll-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #0A1529;
+    color: #fff;
+    border: 1.5px solid transparent;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    padding: 16px 18px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+    opacity: 0;
+    transition: all 0.3s ease;
+    transition-property: opacity, display, border, background-color;
+    transition-duration: 0.3s;
+    transition-timing-function: ease;
 
+}
 
-
-
-
-
-
-
-
-
-
+.scroll-top:hover {
+    background-color: #14213D;
+    border-color: #F3C16E;
+    box-shadow: none;
+}
 
 footer {
     position: relative;
@@ -317,29 +332,15 @@ footer .cols .about-col h3 {
     margin-bottom: 10px;
 }
 
-footer .cols .about-col p {
+footer .cols .school-col p {
     color: #e5e5e5;
     font-size: 13px;
 }
 
-footer .cols .links-col {
+footer .cols .school-col {
     margin-left: auto;
     display: flex;
     justify-content: flex-end
-}
-
-footer .cols .links-col a {
-    display: block;
-    text-decoration: none;
-    color: #e5e5e5;
-    font-size: 20px;
-    margin-top: 1.5vh;
-    transition: color 0.3s ease;
-    font-weight: 500;
-}
-
-footer .cols .links-col a:hover {
-    color: #F3C16E;
 }
 
 .copyright {
