--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -6,6 +6,7 @@
     outline: none;
     border: none;
     box-sizing: border-box;
+    transition: all ease 0.3s;
 }
 
 html {
@@ -24,6 +25,7 @@ a {
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #000814;
+    transition: all ease 0.5s;
 }
 
 nav {
@@ -39,7 +41,7 @@ nav {
     position: fixed;
     width: 100%;
     top: 0;
-    transition: top 0.5s;
+    transition: ease 0.3s;
     z-index: 100;
 }
 
@@ -292,25 +294,48 @@ section .header {
 .scroll-top {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 90px;
     right: 20px;
     background-color: #0A1529;
     color: #fff;
     border: 1.5px solid transparent;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    padding: 16px 18px;
+    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.1);
+    padding: 16px 17.67px;
     border-radius: 50%;
     cursor: pointer;
     font-size: 20px;
     opacity: 0;
     transition: all 0.3s ease;
-    transition-property: opacity, display, border, background-color;
+
+}
+
+.scroll-top:hover {
+    background-color: #14213D;
+    border-color: #F3C16E;
+    box-shadow: none;
+}
+
+.dark-light {
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #0A1529;
+    color: #fff;
+    border: 1.5px solid transparent;
+    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.1);
+    padding: 16px 17.67px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+    opacity: 100;
+    transition: all 0.3s ease;
     transition-duration: 0.3s;
     transition-timing-function: ease;
 
 }
 
-.scroll-top:hover {
+.dark-light:hover {
     background-color: #14213D;
     border-color: #F3C16E;
     box-shadow: none;
@@ -332,15 +357,20 @@ footer .cols .about-col h3 {
     margin-bottom: 10px;
 }
 
-footer .cols .school-col p {
-    color: #e5e5e5;
-    font-size: 13px;
+footer .socials {
+    margin-left: auto;
+    margin-right: 50px;
 }
 
-footer .cols .school-col {
-    margin-left: auto;
-    display: flex;
-    justify-content: flex-end
+footer .socials i {
+    color: #e5e5e5;
+    font-size: 40px;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+footer .socials i:hover {
+    color: #FCA311;
 }
 
 .copyright {
